fixed button position and horizontal scrollbar width

--- a/hwbi/disc/css/mainstyle.css
+++ b/hwbi/disc/css/mainstyle.css
@@ -1361,7 +1361,7 @@ input[type="checkbox"].resources-checkbox {
   margin-top: -10px;
 } 
 
-.reset-hwbi-custom-btn {
+.reset-hwbi-custom-btn, .reset-service-custom-btn {
   position: absolute;
   bottom: 20px;
 }
@@ -1385,6 +1385,7 @@ input[type="checkbox"].resources-checkbox {
 
 ::-webkit-scrollbar {
   width: 7px;
+  height: 7px;
 }
 
 ::-webkit-scrollbar-thumb {
